@@ -1,3 +1,7 @@
+2025-12-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test30-make-process): Adapt test.
+
 2025-12-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test28-process-file)
